z-index fix

--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -273,7 +273,7 @@ $go-button-top-margin: 15px; // button is on same level with title of problem
       margin-right:25px;
     }
     .go-button p{
-        z-index: 100500;
+        z-index: 1;
         margin-top: $go-button-top-margin;
         a{
           text-align:center;
